# AnglerBot

./: .gitignore  Cargo.toml
data/: config.json  fish.json  multipliers.json  old_rods.json  rods.json
data/guilds/1193740449266016346/users/: 202608290239086593.json  254910359234805761.json  318884828508454912.json  401597034517495808.json  413042983340867614.json  422159994201309207.json  445718886474711052.json  541083707939880960.json  616772239559491594.json
data/guilds/605224795256127518/users/: 318884828508454912.json  413042983340867614.json  422159994201309207.json  584883546728955905.json
data/guilds/680823676127412534/users/: 318884828508454912.json
data/guilds/972962996416557147/users/: 254910359234805761.json  318884828508454912.json  421360674334310400.json  445718886474711052.json  541083707939880960.json  616772239559491594.json
src/: main.rs
src/commands/: balance.rs  bestiary.rs  buy.rs  fish.rs  info.rs  mod.rs  rod_info.rs  shop.rs
src/data/: config.rs  fish.rs  mod.rs  multipliers.rs  old_rods.rs  rods.rs  shop.rs  userfile.rs
