[package]
name = "angler_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
better_term = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"]}
serde = "*"
serde_json = "*"
dotenv = "*"
rand_distr = "*"
chrono = "*"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway", "client", "collector", "model"]
version = "*"